Actualizar sección Modalidad y alcance con layout de dos columnas y cards

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1466,19 +1466,42 @@
   <section id="modalidad">
     <div class="section-bg section-bg-color"></div>
     <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> MODALIDAD Y ALCANCE</div>
-          <div class="section-title">Modalidad y alcance</div>
-        </div>
-      </div>
+      <div class="who-wrap">
+        <div class="who-inner">
+          <div class="who-left">
+            <div class="who-kicker"><span class="who-dot" aria-hidden="true"></span> MODALIDAD Y ALCANCE</div>
+            <h2 class="who-title">Modalidad y alcance</h2>
+            <p class="who-text">
+              Ofrecemos flexibilidad en modalidades, duraciones y capacidad para adaptarnos a las necesidades de tu organización.
+            </p>
+          </div>
 
-      <div class="glass-card" style="margin-top: 18px; text-align: left;">
-        <ul class="bullets" style="text-align: left; max-width: 100%;">
-          <li style="justify-content: flex-start;"><strong>Modalidad:</strong> Presencial / Híbrida / Virtual</li>
-          <li style="justify-content: flex-start;"><strong>Duración:</strong> 2h | 3h | 4h | Sesión completa (6–8h)</li>
-          <li style="justify-content: flex-start;"><strong>Participantes:</strong> 10 a 250+</li>
-        </ul>
+          <div class="who-right" style="background: rgba(254,251,249,.95); padding: 40px; display: flex; flex-direction: column; gap: 16px; justify-content: center;">
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">📍</div>
+              <h3 class="service-title">Modalidad</h3>
+              <p class="service-text" style="margin: 8px 0 0;">
+                Presencial / Híbrida / Virtual
+              </p>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon wine" aria-hidden="true">⏱️</div>
+              <h3 class="service-title">Duración</h3>
+              <p class="service-text" style="margin: 8px 0 0;">
+                2h | 3h | 4h | Sesión completa (6–8h)
+              </p>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">👥</div>
+              <h3 class="service-title">Participantes</h3>
+              <p class="service-text" style="margin: 8px 0 0;">
+                10 a 250+
+              </p>
+            </article>
+          </div>
+        </div>
       </div>
     </div>
   </section>
