Actualizar secciones Dirigido a y Entregables con layout de dos columnas y cards

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1595,20 +1595,44 @@
   <section id="dirigido-a">
     <div class="section-bg section-bg-color"></div>
     <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> DIRIGIDO A</div>
-          <div class="section-title">Dirigido a</div>
+      <div class="who-wrap">
+        <div class="who-inner">
+          <div class="who-left">
+            <div class="who-kicker"><span class="who-dot" aria-hidden="true"></span> DIRIGIDO A</div>
+            <h2 class="who-title">Dirigido a</h2>
+            <p class="who-text">
+              Nuestros programas están diseñados para distintos niveles y áreas organizacionales, desde equipos operativos hasta alta dirección.
+            </p>
+          </div>
+
+          <div class="who-right" style="background: rgba(254,251,249,.95); padding: 40px; display: flex; flex-direction: column; gap: 16px; justify-content: center;">
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">👥</div>
+              <h3 class="service-title">Equipos operativos, administrativos y técnicos</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon wine" aria-hidden="true">💼</div>
+              <h3 class="service-title">Mandos medios y liderazgo</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">🎯</div>
+              <h3 class="service-title">Alta dirección</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon wine" aria-hidden="true">📋</div>
+              <h3 class="service-title">RRHH / Talento / Cultura / DEI</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">🌱</div>
+              <h3 class="service-title">Sostenibilidad / ESG / Community Engagement / Compliance</h3>
+            </article>
+          </div>
         </div>
       </div>
-
-      <ul class="bullets" style="margin-top: 18px;">
-        <li>Equipos operativos, administrativos y técnicos</li>
-        <li>Mandos medios y liderazgo</li>
-        <li>Alta dirección</li>
-        <li>RRHH / Talento / Cultura / DEI</li>
-        <li>Sostenibilidad / ESG / Community Engagement / Compliance</li>
-      </ul>
     </div>
   </section>
 
@@ -1616,19 +1640,39 @@
   <section id="entregables">
     <div class="section-bg section-bg-color"></div>
     <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> ENTREGABLES</div>
-          <div class="section-title">Entregables</div>
+      <div class="who-wrap">
+        <div class="who-inner">
+          <div class="who-left">
+            <div class="who-kicker"><span class="who-dot" aria-hidden="true"></span> ENTREGABLES</div>
+            <h2 class="who-title">Entregables</h2>
+            <p class="who-text">
+              Cada programa incluye herramientas y recursos prácticos diseñados para facilitar la implementación y el seguimiento.
+            </p>
+          </div>
+
+          <div class="who-right" style="background: rgba(254,251,249,.95); padding: 40px; display: flex; flex-direction: column; gap: 16px; justify-content: center;">
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">🛠️</div>
+              <h3 class="service-title">Toolkit práctico</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon wine" aria-hidden="true">📚</div>
+              <h3 class="service-title">Guías de implementación</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon teal" aria-hidden="true">🤝</div>
+              <h3 class="service-title">Acuerdos y compromisos</h3>
+            </article>
+
+            <article class="service-card" style="margin: 0; padding: 24px;">
+              <div class="service-icon wine" aria-hidden="true">📊</div>
+              <h3 class="service-title">Evaluación</h3>
+            </article>
+          </div>
         </div>
       </div>
-
-      <ul class="bullets" style="margin-top: 18px;">
-        <li>Toolkit práctico</li>
-        <li>Guías de implementación</li>
-        <li>Acuerdos y compromisos</li>
-        <li>Evaluación</li>
-      </ul>
     </div>
   </section>
 
