--- a/consultoria.html
+++ b/consultoria.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/png" href="./assets/Imagenes/Logo/Fivecon.png" />
+  <link rel="apple-touch-icon" href="./assets/Imagenes/Logo/Fivecon.png" />
   <title>Elvira Strategy | Consultoría</title>
 
   <style>
