--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="icon" type="image/png" href="./assets/Imagenes/Logo/Fivecon.png" />
+  <link rel="apple-touch-icon" href="./assets/Imagenes/Logo/Fivecon.png" />
   <title>Elvira Strategy | Team Building Estratégico + Formación para Equipos</title>
   <meta name="description" content="Team Building estratégico, capacitación y formación para equipos. Cultura organizacional, derechos humanos, DEI, bienestar y liderazgo. Modalidades presencial, híbrida y virtual." />
 
