--- a/consultoria.html
+++ b/consultoria.html
@@ -1,10 +1,11 @@
+
 <!doctype html>
 <html lang="es-MX">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <link rel="icon" type="image/png" href="./assets/Imagenes/Logo/Fivecon.png" />
-  <link rel="apple-touch-icon" href="./assets/Imagenes/Logo/Fivecon.png" />
+  <link rel="icon" type="image/png" href="./assets/Logo/Fivecon.png" />
+  <link rel="apple-touch-icon" href="./assets/Logo/Fivecon.png" />
   <title>Elvira Strategy | Consultoría</title>
 
   <style>
