Agregar meta tags Open Graph con banner.jpg para previews de enlaces

--- a/consultoria.html
+++ b/consultoria.html
@@ -6,6 +6,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="./assets/Logo/Fivecon.png" />
   <link rel="apple-touch-icon" href="./assets/Logo/Fivecon.png" />
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Consultoría técnica especializada para fortalecer políticas, protocolos y cultura organizacional con enfoque de derechos humanos, igualdad e inclusión." />
+  
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.elvirastrategy.com/consultoria.html" />
+  <meta property="og:title" content="Elvira Strategy | Consultoría" />
+  <meta property="og:description" content="Consultoría técnica especializada para fortalecer políticas, protocolos y cultura organizacional con enfoque de derechos humanos, igualdad e inclusión." />
+  <meta property="og:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.elvirastrategy.com/consultoria.html" />
+  <meta property="twitter:title" content="Elvira Strategy | Consultoría" />
+  <meta property="twitter:description" content="Consultoría técnica especializada para fortalecer políticas, protocolos y cultura organizacional con enfoque de derechos humanos, igualdad e inclusión." />
+  <meta property="twitter:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
   <title>Elvira Strategy | Consultoría</title>
 
   <style>
