--- a/cursos.html
+++ b/cursos.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="./assets/Logo/Fivecon.png" />
   <link rel="apple-touch-icon" href="./assets/Logo/Fivecon.png" />
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Formación estratégica para organizaciones y comunidades. Programas de capacitación a la medida, presencial, en línea o híbrida." />
+  
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.elvirastrategy.com/cursos.html" />
+  <meta property="og:title" content="Elvira Strategy | Cursos" />
+  <meta property="og:description" content="Formación estratégica para organizaciones y comunidades. Programas de capacitación a la medida, presencial, en línea o híbrida." />
+  <meta property="og:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.elvirastrategy.com/cursos.html" />
+  <meta property="twitter:title" content="Elvira Strategy | Cursos" />
+  <meta property="twitter:description" content="Formación estratégica para organizaciones y comunidades. Programas de capacitación a la medida, presencial, en línea o híbrida." />
+  <meta property="twitter:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
   <title>Elvira Strategy | Cursos</title>
 
   <style>
