--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="./assets/Logo/Fivecon.png" />
   <link rel="apple-touch-icon" href="./assets/Logo/Fivecon.png" />
+  
+  <!-- Meta Description -->
+  <meta name="description" content="Consultoría especializada en derechos humanos, DEI, transformación cultural y sostenibilidad. Team building estratégico y formación para equipos." />
+  
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.elvirastrategy.com/" />
+  <meta property="og:title" content="Elvira Strategy | Inicio" />
+  <meta property="og:description" content="Consultoría especializada en derechos humanos, DEI, transformación cultural y sostenibilidad. Team building estratégico y formación para equipos." />
+  <meta property="og:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.elvirastrategy.com/" />
+  <meta property="twitter:title" content="Elvira Strategy | Inicio" />
+  <meta property="twitter:description" content="Consultoría especializada en derechos humanos, DEI, transformación cultural y sostenibilidad. Team building estratégico y formación para equipos." />
+  <meta property="twitter:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
   <title>Elvira Strategy | Inicio</title>
 
   <style>
