--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -5,8 +5,25 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/png" href="./assets/Logo/Fivecon.png" />
   <link rel="apple-touch-icon" href="./assets/Logo/Fivecon.png" />
-  <title>Elvira Strategy | Team Building Estratégico + Formación para Equipos</title>
+  
+  <!-- Meta Description -->
   <meta name="description" content="Team Building estratégico, capacitación y formación para equipos. Cultura organizacional, derechos humanos, DEI, bienestar y liderazgo. Modalidades presencial, híbrida y virtual." />
+  
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.elvirastrategy.com/team-building-formacion.html" />
+  <meta property="og:title" content="Elvira Strategy | Team Building Estratégico + Formación para Equipos" />
+  <meta property="og:description" content="Team Building estratégico, capacitación y formación para equipos. Cultura organizacional, derechos humanos, DEI, bienestar y liderazgo. Modalidades presencial, híbrida y virtual." />
+  <meta property="og:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.elvirastrategy.com/team-building-formacion.html" />
+  <meta property="twitter:title" content="Elvira Strategy | Team Building Estratégico + Formación para Equipos" />
+  <meta property="twitter:description" content="Team Building estratégico, capacitación y formación para equipos. Cultura organizacional, derechos humanos, DEI, bienestar y liderazgo. Modalidades presencial, híbrida y virtual." />
+  <meta property="twitter:image" content="https://www.elvirastrategy.com/assets/Logo/banner.jpg" />
+  
+  <title>Elvira Strategy | Team Building Estratégico + Formación para Equipos</title>
 
   <style>
     /* Inter - Variable Font */
