--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1749,7 +1749,7 @@
             Instagram
           </a>
 
-          <a class="teal" href="https://wa.link/4wxidx" target="_blank" rel="noopener">
+          <a class="teal" href="https://api.whatsapp.com/send?phone=5215578634127&text=Hola%20%F0%9F%91%8B%0AQuiero%20info%20sobre%20Team%20Building%20y%20formación%20para%20equipos%20de%20Elvira%20Strategy%20%F0%9F%98%8A" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M20 12a8 8 0 0 1-11.7 7L4 20l1-4.2A8 8 0 1 1 20 12Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
               <path d="M9.4 9.2c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c.7 1.2 1.7 2.2 2.9 2.9l.4-.4c.3-.3.8-.3 1.1 0l.7.7c.3.3.3.8 0 1.1l-.4.4c-.5.5-1.2.7-1.9.6-3.7-.7-6.7-3.7-7.4-7.4-.1-.7.1-1.4.6-1.9l.4-.4Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
