Quitar signos de interrogación en 'Quiénes somos' y agregar sección Team Building en cursos

--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@
           <div class="who-left">
             <div class="who-kicker"><span class="who-dot"></span> QUIÉNES SOMOS</div>
 
-            <h2 class="who-title">¿Quiénes somos?</h2>
+            <h2 class="who-title">Quiénes somos</h2>
 
             <p class="who-text">
               Elvira Strategy es una consultoría especializada en derechos humanos, diversidad, equidad e inclusión (DEI), transformación cultural, ética organizacional y sostenibilidad, con experiencia nacional e internacional en sectores público, privado, académico y social.
