--- a/cursos.html
+++ b/cursos.html
@@ -1677,6 +1677,29 @@
     </div>
   </section>
 
+  <!-- SECCIÓN: TEAM BUILDING -->
+  <section id="team-building">
+    <div class="section-bg section-bg-color"></div>
+    <div class="wrap">
+      <div class="section-head">
+        <div>
+          <div class="badge"><span class="dot" aria-hidden="true"></span> TEAM BUILDING</div>
+          <div class="section-title">Team Building Estratégico + Formación para Equipos</div>
+          <p class="section-desc" style="margin-top: 12px;">
+            Consultoría especializada en derechos humanos, DEI, ética organizacional, transformación cultural y sostenibilidad. Acompañamos a empresas y organizaciones a construir espacios de trabajo más inclusivos, seguros y dignos.
+          </p>
+        </div>
+      </div>
+
+      <div class="glass-card" style="margin-top: 24px; text-align: center;">
+        <p style="margin: 0 0 24px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 16px;">
+          Team building estratégico, capacitación y consultoría técnica especializada, alineando cultura y resultados con estándares nacionales e internacionales.
+        </p>
+        <a class="btn primary" href="team-building-formacion.html">Conocer más sobre Team Building</a>
+      </div>
+    </div>
+  </section>
+
   <!-- CTA WHATSAPP -->
   <section id="cta-whatsapp">
     <div class="section-bg section-bg-color"></div>
