Simplificar título del hero a solo 'TEAM BUILDING'

--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1358,7 +1358,7 @@
     <div class="wrap">
       <div class="hero-inner">
         <div>
-          <h1>TEAM BUILDING<br/>ESTRATÉGICO +<br/>FORMACIÓN<br/>PARA EQUIPOS</h1>
+          <h1>TEAM BUILDING</h1>
 
           <div class="pill-row" style="margin-top: 16px;">
             <span class="mini-pill">Cultura organizacional</span>
