Actualizar estructura de sección Team Building en cursos

--- a/cursos.html
+++ b/cursos.html
@@ -1685,17 +1685,23 @@
         <div>
           <div class="badge"><span class="dot" aria-hidden="true"></span> TEAM BUILDING</div>
           <div class="section-title">Team Building Estratégico + Formación para Equipos</div>
-          <p class="section-desc" style="margin-top: 12px;">
-            Consultoría especializada en derechos humanos, DEI, ética organizacional, transformación cultural y sostenibilidad. Acompañamos a empresas y organizaciones a construir espacios de trabajo más inclusivos, seguros y dignos.
-          </p>
         </div>
       </div>
 
-      <div class="glass-card" style="margin-top: 24px; text-align: center;">
-        <p style="margin: 0 0 24px; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 16px;">
-          Team building estratégico, capacitación y consultoría técnica especializada, alineando cultura y resultados con estándares nacionales e internacionales.
+      <div style="margin-top: 24px; max-width: 800px;">
+        <p class="section-desc" style="margin: 0 0 20px; text-align: left;">
+          Consultoría especializada en derechos humanos, DEI, ética organizacional, transformación cultural y sostenibilidad. Acompañamos a empresas y organizaciones a construir espacios de trabajo más inclusivos, seguros y dignos.
         </p>
-        <a class="btn primary" href="team-building-formacion.html">Conocer más sobre Team Building</a>
+
+        <div class="glass-card" style="margin: 0 0 24px; text-align: left; padding: 24px;">
+          <p style="margin: 0; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 16px;">
+            Team building estratégico, capacitación y consultoría técnica especializada, alineando cultura y resultados con estándares nacionales e internacionales.
+          </p>
+        </div>
+
+        <div style="text-align: left;">
+          <a class="btn primary" href="team-building-formacion.html">Conocer más sobre Team Building</a>
+        </div>
       </div>
     </div>
   </section>
