--- a/team-building-formacion.html
+++ b/team-building-formacion.html
@@ -1224,7 +1224,9 @@
         background-position: top center;
       }
       .hero{
-        min-height: 60vh;
+        min-height: 70vh;
+        margin-top: -100px;
+        padding-top: 100px;
       }
     }
     
@@ -1237,9 +1239,9 @@
       .nav{ padding: 12px 14px; gap: 10px; }
       .icon-pill{ width: 36px; height: 36px; }
       .btn{ padding: 10px 14px; font-size: 13px; }
-      .hero{ min-height: 60vh; padding: 40px 0 24px; }
-      .hero-inner{ padding: 24px 0 0; }
-      h1{ max-width: 100%; font-size: clamp(36px, 8vw, 64px); }
+      .hero{ min-height: 70vh; padding: 60px 0 24px; margin-top: -100px; padding-top: 100px; }
+      .hero-inner{ padding: 20px 0 0; }
+      h1{ max-width: 100%; font-size: clamp(36px, 8vw, 64px); margin: 16px auto 12px; }
       .sub{ font-size: 14px; padding: 0 12px; }
       .hero-actions{ gap: 10px; margin-top: 18px; }
       .btn{ width: 100%; justify-content: center; }
@@ -1286,7 +1288,9 @@
       .icon-pill svg{ width: 16px; height: 16px; }
       .btn{ padding: 10px 12px; font-size: 12px; }
       .hamburger{ width: 38px; height: 38px; }
-      h1{ font-size: clamp(32px, 10vw, 56px); line-height: 1; }
+      .hero{ min-height: 75vh; padding: 80px 0 24px; margin-top: -90px; padding-top: 90px; }
+      .hero-inner{ padding: 16px 0 0; }
+      h1{ font-size: clamp(32px, 10vw, 56px); line-height: 1.1; margin: 12px auto 10px; }
       .kicker{ font-size: 11px; padding: 6px 12px; }
       .sub{ font-size: 13px; line-height: 1.6; }
       .hero-actions{ flex-direction: column; }
