--- a/cursos.html
+++ b/cursos.html
@@ -1678,29 +1678,24 @@
   </section>
 
   <!-- SECCIÓN: TEAM BUILDING -->
-  <section id="team-building">
-    <div class="section-bg section-bg-color"></div>
+  <section id="team-building" style="background: #0a0a0a; padding: 80px 0;">
     <div class="wrap">
-      <div class="section-head">
-        <div>
-          <div class="badge"><span class="dot" aria-hidden="true"></span> TEAM BUILDING</div>
-          <div class="section-title">Team Building Estratégico + Formación para Equipos</div>
+      <div style="max-width: 900px; margin: 0 auto;">
+        <div class="badge" style="background: rgba(232,197,202,.15); border-color: rgba(232,197,202,.25); color: var(--wine); margin-bottom: 32px;">
+          <span class="dot" aria-hidden="true"></span> TEAM BUILDING
         </div>
-      </div>
+        
+        <h2 style="font-family: 'Cormorant Garamond', Georgia, 'Times New Roman', serif; font-size: clamp(42px, 5vw, 72px); font-weight: 600; line-height: 1.1; color: #ffffff; margin: 0 0 24px; letter-spacing: -0.02em;">
+          Team Building<br/>
+          <span style="color: #ff6b35; font-style: italic; font-weight: 500;">Estratégico + Formación para Equipos</span>
+        </h2>
 
-      <div style="margin-top: 24px; max-width: 800px;">
-        <p class="section-desc" style="margin: 0 0 20px; text-align: left;">
-          Consultoría especializada en derechos humanos, DEI, ética organizacional, transformación cultural y sostenibilidad. Acompañamos a empresas y organizaciones a construir espacios de trabajo más inclusivos, seguros y dignos.
+        <p style="color: rgba(255,255,255,.85); font-size: 18px; line-height: 1.8; margin: 0 0 40px; max-width: 85ch;">
+          Consultoría especializada en derechos humanos, DEI, ética organizacional, transformación cultural y sostenibilidad. Acompañamos a empresas y organizaciones a construir espacios de trabajo más inclusivos, seguros y dignos, mediante team building estratégico, capacitación y consultoría técnica especializada, alineando cultura y resultados con estándares nacionales e internacionales.
         </p>
 
-        <div class="glass-card" style="margin: 0 0 24px; text-align: left; padding: 24px;">
-          <p style="margin: 0; color: rgba(45,45,45,.70); line-height: 1.85; font-size: 16px;">
-            Team building estratégico, capacitación y consultoría técnica especializada, alineando cultura y resultados con estándares nacionales e internacionales.
-          </p>
-        </div>
-
         <div style="text-align: left;">
-          <a class="btn primary" href="team-building-formacion.html">Conocer más sobre Team Building</a>
+          <a class="btn primary" href="team-building-formacion.html" style="font-size: 16px; padding: 14px 28px;">Conocer más sobre Team Building</a>
         </div>
       </div>
     </div>
