--- a/cursos.html
+++ b/cursos.html
@@ -1314,7 +1314,9 @@
         background-position: top center;
       }
       .hero{
-        min-height: 60vh;
+        min-height: 70vh;
+        margin-top: -100px;
+        padding-top: 100px;
       }
     }
     
@@ -1325,9 +1327,9 @@
       .brand{ min-width: unset; }
       .logo{ width: 90px; height: auto; }
       .nav-cta{ min-width: unset; gap: 8px; }
-      .hero{ min-height: 60vh; padding: 40px 0 24px; }
-      .hero-inner{ padding: 24px 0 0; }
-      h1{ max-width: 100%; font-size: clamp(36px, 8vw, 64px); }
+      .hero{ min-height: 70vh; padding: 60px 0 24px; margin-top: -100px; padding-top: 100px; }
+      .hero-inner{ padding: 20px 0 0; }
+      h1{ max-width: 100%; font-size: clamp(36px, 8vw, 64px); margin: 16px auto 12px; }
       .sub{ font-size: 14px; padding: 0 12px; }
       .btn{ width: 100%; justify-content: center; }
       .pricing-wrap{ grid-template-columns: 1fr; }
@@ -1340,6 +1342,23 @@
       .section-head{ flex-direction:column; align-items:flex-start; }
       .social{ justify-content:flex-start; }
       .footer-bottom{ flex-direction: column; align-items: flex-start; }
+    }
+
+    @media (max-width: 480px){
+      .nav{ padding: 10px 12px; }
+      .logo{ width: 90px; height: auto; }
+      .brand b{ font-size: 13px; }
+      .icon-pill{ width: 32px; height: 32px; }
+      .icon-pill svg{ width: 16px; height: 16px; }
+      .btn{ padding: 10px 12px; font-size: 12px; }
+      .hamburger{ width: 38px; height: 38px; }
+      .hero{ min-height: 75vh; padding: 80px 0 24px; margin-top: -90px; padding-top: 90px; }
+      .hero-inner{ padding: 16px 0 0; }
+      h1{ font-size: clamp(32px, 10vw, 56px); line-height: 1.1; margin: 12px auto 10px; }
+      .kicker{ font-size: 11px; padding: 6px 12px; }
+      .sub{ font-size: 13px; line-height: 1.6; }
+      .hero-actions{ flex-direction: column; }
+      .btn{ width: 100%; }
     }
   </style>
 </head>
