--- a/consultoria.html
+++ b/consultoria.html
@@ -1271,6 +1271,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="https://api.whatsapp.com/send?phone=5215578634127&text=Hola%20%F0%9F%91%8B%0AQuiero%20info%20sobre%20los%20cursos%20de%20Elvira%20Strategy%20%F0%9F%98%8A" target="_blank" rel="noopener">AGENDAR REUNIÓN</a>
             <a class="btn wine" href="#trust">Ver líneas de consultoría</a>
+            <a class="btn teal" href="team-building-formacion.html">Team Building</a>
           </div>
 
           <div class="pill-row">
