--- a/cursos.html
+++ b/cursos.html
@@ -1432,6 +1432,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="https://wa.link/axdqt6" target="_blank" rel="noopener">Solicitar programa personalizado</a>
             <a class="btn wine" href="#lineas">Ver líneas de capacitación</a>
+            <a class="btn teal" href="team-building-formacion.html">Team Building</a>
           </div>
 
           <div class="pill-row">
