--- a/index.html
+++ b/index.html
@@ -1088,6 +1088,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="consultoria.html">Consultoría</a>
             <a class="btn wine" href="cursos.html">Cursos</a>
+            <a class="btn teal" href="team-building-formacion.html">Team Building</a>
           </div>
 
           <div class="pill-row">
