Actualizar copy del segundo párrafo del hero para incluir team building

--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
             Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos.
           </p>
           <p class="sub" style="margin-top: 12px;">
-            Lo hacemos a través de capacitación estratégica, consultoría técnica especializada y procesos de sensibilización con impacto organizacional y social.
+            Lo hacemos a través de capacitación estratégica, consultoría técnica especializada, team building y procesos de sensibilización.
           </p>
 
           <div class="hero-actions">
