Cambiar botón Team Building de teal a verde

--- a/cursos.html
+++ b/cursos.html
@@ -291,6 +291,17 @@
       box-shadow: 0 12px 35px rgba(184,90,107,.18);
       transform: translateY(-2px);
     }
+    /* Verde (Team Building) */
+    .btn.green{
+      background: linear-gradient(135deg, #4CAF50, #2E7D32);
+      color: rgba(254,251,249,.98);
+      box-shadow: 0 8px 25px rgba(46,125,50,.15);
+    }
+    .btn.green:hover{
+      background: linear-gradient(135deg, #2E7D32, #4CAF50);
+      box-shadow: 0 12px 35px rgba(46,125,50,.20);
+      transform: translateY(-2px);
+    }
     .btn.ghost{
       background: rgba(232,197,202,.12);
       border: 1px solid rgba(232,197,202,.25);
@@ -1432,7 +1443,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="https://wa.link/axdqt6" target="_blank" rel="noopener">Solicitar programa personalizado</a>
             <a class="btn wine" href="#lineas">Ver líneas de capacitación</a>
-            <a class="btn teal" href="team-building-formacion.html">Team Building</a>
+            <a class="btn green" href="team-building-formacion.html">Team Building</a>
           </div>
 
           <div class="pill-row">
