--- a/consultoria.html
+++ b/consultoria.html
@@ -296,6 +296,17 @@
       box-shadow: 0 12px 35px rgba(184,90,107,.18);
       transform: translateY(-2px);
     }
+    /* Verde (Team Building) */
+    .btn.green{
+      background: linear-gradient(135deg, #4CAF50, #2E7D32);
+      color: rgba(254,251,249,.98);
+      box-shadow: 0 8px 25px rgba(46,125,50,.15);
+    }
+    .btn.green:hover{
+      background: linear-gradient(135deg, #2E7D32, #4CAF50);
+      box-shadow: 0 12px 35px rgba(46,125,50,.20);
+      transform: translateY(-2px);
+    }
     .btn.ghost{
       background: rgba(232,197,202,.12);
       border: 1px solid rgba(232,197,202,.25);
@@ -1271,7 +1282,7 @@
           <div class="hero-actions">
             <a class="btn primary" href="https://api.whatsapp.com/send?phone=5215578634127&text=Hola%20%F0%9F%91%8B%0AQuiero%20info%20sobre%20los%20cursos%20de%20Elvira%20Strategy%20%F0%9F%98%8A" target="_blank" rel="noopener">AGENDAR REUNIÓN</a>
             <a class="btn wine" href="#trust">Ver líneas de consultoría</a>
-            <a class="btn teal" href="team-building-formacion.html">Team Building</a>
+            <a class="btn green" href="team-building-formacion.html">Team Building</a>
           </div>
 
           <div class="pill-row">
