Agregar 'con impacto organizacional y social' al segundo párrafo del hero

--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
             Acompañamos a empresas, organizaciones y comunidades a construir espacios más inclusivos, seguros y dignos.
           </p>
           <p class="sub" style="margin-top: 12px;">
-            Lo hacemos a través de capacitación estratégica, consultoría técnica especializada, team building y procesos de sensibilización.
+            Lo hacemos a través de capacitación estratégica, consultoría técnica especializada, team building y procesos de sensibilización con impacto organizacional y social.
           </p>
 
           <div class="hero-actions">
